feat: add Entitlement to user